<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_plc</name>
  <version>0.0.1</version>
  <description>Nodo que lee datos del TurtleBot3 y los envía al PLC MicroLogix 1400 por Modbus TCP.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <!-- Dependencias para el paquete -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
 <!--  <depend>turtlebot3_msgs</depend> -->

  <!-- Dependencias para las pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
